# NoteAppSite

./: .gitignore  docker-compose.yaml  pyproject.toml
notes/: docker-compose.yaml
notes/data/: postmaster.pid
notes/data/base/1/: 2619  2696  2840  2841  pg_internal.init
notes/data/base/4/: pg_internal.init
notes/data/base/5/: 1247  1249  1249_fsm  1259  1259_fsm  1259_vm  16386  16387  16391  16392  16394  16395  16398  16400  16402  16403  16406  16408  16412  16414  16416  16420  16422  16423  16426  16428  16430  16434  16436  16440  16442  16449  16450  16451  16463  16464  16465  16466  16478  16479  (+70 more)
notes/data/global/: 1260  pg_control  pg_internal.init
notes/noteapp/: admin.py  forms.py  models.py  urls.py  views.py
notes/noteapp/migrations/: 0001_initial.py  0002_note_user_tag_user_tag_tag_of_username.py
notes/noteapp/templates/noteapp/: base.html  details.html  index.html  note.html  tag.html
notes/notes/: asgi.py  settings.py  urls.py  wsgi.py
notes/users/: apps.py  forms.py  models.py  signals.py  urls.py  views.py
notes/users/migrations/: 0001_initial.py
notes/users/templates/users/: login.html  profile.html  signup.html
