[tool.poetry]
name = "noteappsite"
version = "0.1.0"
description = ""
authors = ["Nazar Chaban <134311145+Vivern0@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.3"
pillow = "^10.2.0"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
